method updated in QAJobsPage